# Nano-Whiteboard-Doctor

./: .gitignore  README.md  app.py  build-deb.sh  package-lock.json  package.json  pyproject.toml  tsconfig.json
src/nano_tech_diagrams/: __main__.py  app.py  cli.py  core.py  mcp_server.py
src/nano_whiteboard_doctor/: __main__.py  app.py  cli.py
ts-src/: core.ts  index.ts  mcp-server.ts
