[project]
name = "nano-tech-diagrams"
version = "0.3.1"
description = "Desktop tool for creating and editing tech diagrams using Nano Banana 2 (via Fal AI)"
authors = [{ name = "Daniel Rosehill", email = "public@danielrosehill.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "pyqt6>=6.11.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]

[project.scripts]
nano-tech-diagrams = "nano_tech_diagrams.cli:cli_main"
nano-tech-diagrams-mcp = "nano_tech_diagrams.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
